src/objects/SLXOpportunity__c.object
<CustomObject>
    <description>Opportunity</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adwords_Daily_Budget__c</fullName>
        <label>Adwords Daily Budget</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adwords_ID__c</fullName>
        <label>Adwords ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_Keyword__c</fullName>
        <description>Top adwords keywords of this client</description>
        <label>Adwords Keyword</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>If so, what is the amount</inlineHelpText>
        <label>Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assign_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Booked_Date__c</fullName>
        <label>Audit Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Completed_Date__c</fullName>
        <label>Audit Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Expectation__c</fullName>
        <label>Client Expectation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Impression_Share_AdRank__c</fullName>
        <label>Lost Impression Share - AdRank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lost_Impression_Share_Budget__c</fullName>
        <label>Lost Impression Share - Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opp_Type__c</fullName>
        <label>Opp Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates who never answer our calls. Once 5 attmepts have been made the sales person can mark it as Parked. They can go back to these clients when they have a low qty of open workable opps</description>
        <inlineHelpText>Indicates who never answer our calls. Once 5 attmepts have been made the sales person can mark it as Parked. They can go back to these clients when they have a low qty of open workable opps</inlineHelpText>
        <label>Parked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you discussed pricing with the client?</inlineHelpText>
        <label>Pricing Discussed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adwords Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+ Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Opportunity__c</fullName>
        <label>Reason For Opportunity</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLX_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLX Lead</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipName>SLX_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <description>Which sales team the opportunity belongs to</description>
        <label>Sales Team</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_Salesperson__c</fullName>
        <label>Send to Salesperson (no longer used)</label>
        <picklist>
            <picklistValues>
                <fullName>Gretel Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Andreotti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tate Wotton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simon Golding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meg Arreza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joshua Beatty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Teamleader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abigail Harrison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ngawai Mason</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spinify_Is_AuditedThisMonth__c</fullName>
        <description>If the audit had been done on this month</description>
        <formula>If(MONTH( Audit_Completed_Date__c) = MONTH(TODAY()), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the audit had been done on this month</inlineHelpText>
        <label>Spinify Is AuditedThisMonth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spinify_Is_Target__c</fullName>
        <description>If the audit booked date in this month</description>
        <formula>IF(  MONTH(Audit_Booked_Date__c) = MONTH(Today()) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the audit booked date in this month</inlineHelpText>
        <label>Spinify Is Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Ran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>BJB Opportunity</label>
    <listViews>
        <fullName>Digital</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Send_to_Salesperson__c</field>
            <operation>contains</operation>
            <value>Gretel Phillips,Daniel Andreotti,Joshua Beatty</value>
        </filters>
        <label>Digital Strategy</label>
        <sharedTo>
            <group>Allen_Johnstone</group>
            <role>SLX_Aus_Receptionist</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Facebook_Opps</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Phone_Number__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_to_Salesperson__c</field>
            <operation>equals</operation>
            <value>Sales Teamleader</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Facebook Management</value>
        </filters>
        <label>Facebook Opps</label>
        <sharedTo>
            <role>Sales_Manager_Assistant_SLX</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Audit_Booked</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Phone_Number__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Audit Booked</value>
        </filters>
        <label>My Audit Booked</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Digital_Strategy_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Audit_Ran</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Phone_Number__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Audit Ran</value>
        </filters>
        <label>My Audit Ran</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Digital_Strategy_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Follow_Up</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Send_to_Salesperson__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Follow Up</value>
        </filters>
        <label>My Follow Ups</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Digital_Strategy_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Send_to_Salesperson__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My In Progress</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Digital_Strategy_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opps</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Phone_Number__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Ben Bradshaw</value>
        </filters>
        <label>My Opps</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Digital_Strategy_Sales</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Proposal_Sent</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Send_to_Salesperson__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Proposal Sent</value>
        </filters>
        <label>My Proposal Sent</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Digital_Strategy_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_System_Gen</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Phone_Number__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Ben Bradshaw</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>My System Gens</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Digital_Strategy_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Digital_Strategy_Sales</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Send_to_Salesperson__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Phone_Number__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Reason_For_Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BJB Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>